--- a/StatRockSdkDemo/settings.gradle
+++ b/StatRockSdkDemo/settings.gradle
@@ -3,6 +3,10 @@ pluginManagement {
         google()
         mavenCentral()
         gradlePluginPortal()
+
+        flatDir {
+            dirs("libs")
+        }
     }
 }
 dependencyResolutionManagement {
