--- a/StatRockSdkDemo/settings.gradle
+++ b/StatRockSdkDemo/settings.gradle
@@ -13,9 +13,9 @@ dependencyResolutionManagement {
         flatDir {
             dirs 'libs'
         }
-//        maven {
-//            url 'https://raw.githubusercontent.com/stat-rock/android-sdk/master/releases'
-//        }
+        maven {
+            url 'https://raw.githubusercontent.com/stat-rock/android-sdk/master/releases'
+        }
     }
 }
 
